@@ -32,11 +32,11 @@
     <_description>Desktop Applications</_description>
     <module id="bug-buddy"/>
     <module id="dasher" branch="gnome-2-14"/>
-    <module id="deskbar-applet"/>
+    <module id="deskbar-applet" branch="gnome-2-14"/>
     <module id="eel"/>
     <module id="ekiga"/>
     <module id="eog"/>
-    <module id="epiphany"/>
+    <module id="epiphany" branch="gnome-2-14"/>
     <module id="evince"/>
     <module id="evolution" branch="gnome-2-14"/>
     <module id="evolution-data-server" branch="gnome-2-14"/>
@@ -75,7 +75,7 @@
     <module id="gok"/>
     <module id="gtkhtml" branch="gnome-2-14"/>
     <module id="gtksourceview"/>
-    <module id="gucharmap"/>
+    <module id="gucharmap" branch="gnome-2-14"/>
     <module id="libgnomeprint"/>
     <module id="libgnomeprintui"/>
     <module id="libgtop"/>
@@ -87,7 +87,7 @@
     <module id="totem"/>
     <module id="vino"/>
     <module id="vte"/>
-    <module id="yelp"/>
+    <module id="yelp" branch="gnome-2-14" />
     <module id="zenity"/>
   </category>
   
