@@ -1,3 +1,8 @@
+2006-03-13  Danilo Šegan  <danilo@gnome.org>
+
+	* releases.xml.in: branch epiphany, deskbar-applet, yelp, gucharmap.
+	* gnome-modules.xml.in: Branch epiphany.
+
 2006-03-11  Danilo Šegan  <danilo@gnome.org>
 
 	* gnome-modules.xml.in: Add base tags.
